force-app/main/default/objects/Contact/fields/Is_Digital_Experience_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Digital_Experience_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AOPMemberIndividual in SPOP</description>
    <label>Is Digital Experience User</label>
    <type>Checkbox</type>
</CustomField>