force-app/main/default/objects/Contact/fields/Is_Group_Leader__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AOPMemberGroupLeader in SPOP</description>
    <label>Is Group Leader</label>
    <type>Checkbox</type>
</CustomField>