force-app/main/default/objects/Contact/fields/Is_Group_Participant__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AOPMemberGroupParticipant in SPOP</description>
    <label>Is Group Participant</label>
    <type>Checkbox</type>
</CustomField>