force-app/main/default/objects/Contact/fields/Is_In_Step_Family__c.field-meta.xml
<CustomField>
    <fullName>Is_In_Step_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is In Step Family</label>
    <type>Checkbox</type>
</CustomField>