force-app/main/default/objects/Contact/fields/Is_Single_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Single_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Single Parent</label>
    <type>Checkbox</type>
</CustomField>