force-app/main/default/objects/Contact/fields/Knows_Jesus_Personally__c.field-meta.xml
<CustomField>
    <fullName>Knows_Jesus_Personally__c</fullName>
    <label>Knows Jesus Personally</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>