force-app/main/default/objects/Contact/fields/Languages_Spoken__c.field-meta.xml
<CustomField>
    <fullName>Languages_Spoken__c</fullName>
    <inlineHelpText>Choose all the languages that apply</inlineHelpText>
    <label>Languages Spoken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afrikaan</fullName>
            </value>
            <value>
                <fullName>Afrikaans</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Arabic-Syrian</fullName>
            </value>
            <value>
                <fullName>Bahasa Indonesia</fullName>
            </value>
            <value>
                <fullName>Bahasa Malaysia</fullName>
            </value>
            <value>
                <fullName>Belarusian</fullName>
            </value>
            <value>
                <fullName>British English</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
            <value>
                <fullName>Burmese</fullName>
            </value>
            <value>
                <fullName>Cebuana</fullName>
            </value>
            <value>
                <fullName>Cebuano</fullName>
            </value>
            <value>
                <fullName>Chinese - Complex</fullName>
            </value>
            <value>
                <fullName>Chinese - Mandarin</fullName>
            </value>
            <value>
                <fullName>Chinese - Simplified</fullName>
            </value>
            <value>
                <fullName>Chinese - Traditional</fullName>
            </value>
            <value>
                <fullName>Croation</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>English Adapted</fullName>
            </value>
            <value>
                <fullName>Estonian</fullName>
            </value>
            <value>
                <fullName>Finnish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Hausa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>