force-app/main/default/objects/Contact/fields/Last_Email_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Opt_In_Date__c</fullName>
    <label>Last Email Opt In Date</label>
    <type>DateTime</type>
</CustomField>