force-app/main/default/objects/Contact/fields/Lead_Question_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Question_Comment__c</fullName>
    <inlineHelpText>Web-to-Lead submitted question or comment.</inlineHelpText>
    <label>Lead Question/Comment</label>
    <type>TextArea</type>
</CustomField>