force-app/main/default/objects/Contact/fields/Legacy_Emails__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Emails__c</fullName>
    <label>Legacy Emails</label>
    <type>TextArea</type>
</CustomField>