force-app/main/default/objects/Contact/fields/Legacy_Partner_2__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Partner_2__c</fullName>
    <description>This field populates when the Legacy Partner checkbox is true</description>
    <label>Legacy Partner 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>