force-app/main/default/objects/Contact/fields/Legacy_Partner__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Partner__c</fullName>
    <formula>Account.Legacy_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Partner</label>
    <type>Checkbox</type>
</CustomField>