force-app/main/default/objects/Contact/fields/List_Examples_of_Generousity__c.field-meta.xml
<CustomField>
    <fullName>List_Examples_of_Generousity__c</fullName>
    <description>Used by Development</description>
    <label>List Examples of Generousity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>