force-app/main/default/objects/Contact/fields/Looking_to_dev_something_sustainable__c.field-meta.xml
<CustomField>
    <fullName>Looking_to_dev_something_sustainable__c</fullName>
    <label>Looking to dev. something sustainable?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>