force-app/main/default/objects/Contact/fields/LP_Active__c.field-meta.xml
<CustomField>
    <fullName>LP_Active__c</fullName>
    <formula>TEXT(Account.LP_Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LP Active</label>
    <type>Text</type>
</CustomField>