force-app/main/default/objects/Contact/fields/LP_Delay__c.field-meta.xml
<CustomField>
    <fullName>LP_Delay__c</fullName>
    <description>This field is used in a process to delay the sending of a Legacy Partner Welcome email so any duplicate account have time to merge.</description>
    <label>LP Delay</label>
    <length>5</length>
    <type>Text</type>
</CustomField>