force-app/main/default/objects/Contact/fields/LP_Lapsed_Threshold__c.field-meta.xml
<CustomField>
    <fullName>LP_Lapsed_Threshold__c</fullName>
    <formula>CASE(
    LP_Pledge_Frequency__c, 
    &quot;W - Weekly&quot;, 14,
    &quot;M - Monthly&quot;,60,
    &quot;Q - Quarterly&quot;, 180,
    &quot;S - Semi-Annual&quot;, 365,
    &quot;A - Annual&quot;, 730,
    NULL
     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LP_Lapsed_Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>