force-app/main/default/objects/Contact/fields/LP_Pledge_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LP_Pledge_Frequency__c</fullName>
    <formula>TEXT(Account.LP_Pledge_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field that mirrors the value on the Account/Household record.</inlineHelpText>
    <label>LP Pledge Frequency</label>
    <type>Text</type>
</CustomField>