force-app/main/default/objects/Contact/fields/Mail_Hold__c.field-meta.xml
<CustomField>
    <fullName>Mail_Hold__c</fullName>
    <formula>TEXT(Account.Mail_Hold__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Hold</label>
    <type>Text</type>
</CustomField>