force-app/main/default/objects/Contact/fields/Mailing_Active__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Active</label>
    <type>Checkbox</type>
</CustomField>