force-app/main/default/objects/Contact/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <label>Single (Never Married)</label>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
                <label>Single (Previously Married)</label>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Premarried</fullName>
            </value>
            <value>
                <fullName>Remarried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>