force-app/main/default/objects/Contact/fields/MDM_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>MDM_Acquisition_Date__c</fullName>
    <label>MDM Acquisition Date</label>
    <type>DateTime</type>
</CustomField>