force-app/main/default/objects/Contact/fields/MDM_Code__c.field-meta.xml
<CustomField>
    <fullName>MDM_Code__c</fullName>
    <description>Legacy MDM (VDM) Unique Identifier</description>
    <externalId>true</externalId>
    <label>MDM Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>