force-app/main/default/objects/Contact/fields/Merge_Index__c.field-meta.xml
<CustomField>
    <fullName>Merge_Index__c</fullName>
    <formula>Account.Merge_Index__c + IF( SF_User_Id__c != Null, 50, IF( Is_Attendee__c = TRUE, 40, IF( Donor_Caseload__c != Null, 20,IF( Account.Giving_Count__c &gt;0,10,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>