force-app/main/default/objects/Contact/fields/Military__c.field-meta.xml
<CustomField>
    <fullName>Military__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recognize military contacts</description>
    <inlineHelpText>Contact has indicated they are in the military.</inlineHelpText>
    <label>Military</label>
    <type>Checkbox</type>
</CustomField>