force-app/main/default/objects/Contact/fields/Ministry_Experience_Tools_Used__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Experience_Tools_Used__c</fullName>
    <label>Ministry Experience &amp; Tools Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>