force-app/main/default/objects/Contact/fields/Ministry_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Involvement__c</fullName>
    <label>Ministry Involvement</label>
    <type>TextArea</type>
</CustomField>