force-app/main/default/objects/Contact/fields/Ministry_Relationships_Past_Current__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Relationships_Past_Current__c</fullName>
    <label>Ministry Relationships, Past &amp; Current</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>