force-app/main/default/objects/Contact/fields/Ministry_Vision_Shared_With_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Vision_Shared_With_Spouse__c</fullName>
    <inlineHelpText>Please enter information here as to the shared vision and desire with a husband and wife (and kids if appropriate) of ministry.  Either they are currently working in or want to work in the future</inlineHelpText>
    <label>Involved w/ Spouse In Ministry?</label>
    <type>TextArea</type>
</CustomField>