force-app/main/default/objects/Contact/fields/MinRep_Notes__c.field-meta.xml
<CustomField>
    <fullName>MinRep_Notes__c</fullName>
    <description>For MinRep Use Only.</description>
    <label>MinRep Notes</label>
    <type>TextArea</type>
</CustomField>