force-app/main/default/objects/Contact/fields/Mobile_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Carrier__c</fullName>
    <label>Mobile Carrier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>