force-app/main/default/objects/Contact/fields/Mobile_Country__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country__c</fullName>
    <label>Mobile Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>