force-app/main/default/objects/Contact/fields/Mobile_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Line_Type__c</fullName>
    <label>Mobile Line Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>