force-app/main/default/objects/Contact/fields/Mobile_Location__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Location__c</fullName>
    <label>Mobile Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>