force-app/main/default/objects/Contact/fields/Mobile_Response__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Response__c</fullName>
    <label>Mobile Response</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>