force-app/main/default/objects/Contact/fields/Mobile_Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Return_Code__c</fullName>
    <label>Mobile Return Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>