force-app/main/default/objects/Contact/fields/Mobile_Ver_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Ver_Date__c</fullName>
    <label>Mobile Ver Date</label>
    <type>DateTime</type>
</CustomField>