force-app/main/default/objects/Contact/fields/Motivation_to_Give__c.field-meta.xml
<CustomField>
    <fullName>Motivation_to_Give__c</fullName>
    <inlineHelpText>Used by Development</inlineHelpText>
    <label>Motivation to Give?</label>
    <type>TextArea</type>
</CustomField>