force-app/main/default/objects/Contact/fields/Needs_and_Dreams__c.field-meta.xml
<CustomField>
    <fullName>Needs_and_Dreams__c</fullName>
    <label>Needs and Dreams</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>