force-app/main/default/objects/Contact/fields/Next_Planned_Activity__c.field-meta.xml
<CustomField>
    <fullName>Next_Planned_Activity__c</fullName>
    <description>Used by Development</description>
    <label>Next Planned Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personalized Reporting</fullName>
                <default>true</default>
                <label>Personalized Reporting</label>
            </value>
            <value>
                <fullName>Spiritual investment</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Getaways</fullName>
            </value>
            <value>
                <fullName>Regional events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>