force-app/main/default/objects/Contact/fields/NMC__c.field-meta.xml
<CustomField>
    <fullName>NMC__c</fullName>
    <label>NMC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No Gift</fullName>
            </value>
            <value>
                <fullName>Recent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>