force-app/main/default/objects/Contact/fields/On_Caseload__c.field-meta.xml
<CustomField>
    <fullName>On_Caseload__c</fullName>
    <formula>IF(Donor_Caseload__c = NULL,FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Caseload</label>
    <type>Checkbox</type>
</CustomField>