force-app/main/default/objects/Contact/fields/On_going_Communications_Strategy__c.field-meta.xml
<CustomField>
    <fullName>On_going_Communications_Strategy__c</fullName>
    <description>Used by Development</description>
    <label>On-going Communications Strategy</label>
    <type>TextArea</type>
</CustomField>