force-app/main/default/objects/Contact/fields/Other_Active__c.field-meta.xml
<CustomField>
    <fullName>Other_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Active</label>
    <type>Checkbox</type>
</CustomField>