force-app/main/default/objects/Contact/fields/Other_Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Other_Return_Code__c</fullName>
    <formula>If(smartystreets__Other_Return_Code__c = &quot;Confirmed&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Confirmed&quot;, 16, 16) &amp; &quot; Confirmed&quot;,
If(smartystreets__Other_Return_Code__c = &quot;Partial&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - Partially&quot;, 16, 16) &amp; &quot; Confirmed - Partially&quot;,
If(left(smartystreets__Other_Return_Code__c,9) = &quot;Confirmed&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, smartystreets__Other_Return_Code__c, 16, 16) &amp; &quot; &quot; &amp; smartystreets__Other_Return_Code__c,
If(smartystreets__Other_Return_Code__c = &quot;Bad or Blank Address&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Blank Address&quot;, 16, 16) &amp; &quot; Bad or Blank Address&quot;,
If(smartystreets__Other_Return_Code__c = &quot;Not Submitted&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Submitted&quot;, 16, 16) &amp; &quot; Not Submitted&quot;,
If(smartystreets__Other_Return_Code__c = &quot;Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Confirmed&quot;, 16, 16) &amp; &quot; Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/info16.png&quot;, &quot;Not Yet Verified&quot;, 16, 16) &amp; &quot; Not Yet Verified&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Return Code</label>
    <type>Text</type>
</CustomField>