force-app/main/default/objects/Contact/fields/Pastor_Information__c.field-meta.xml
<CustomField>
    <fullName>Pastor_Information__c</fullName>
    <description>Field that stores pastor information for registering them for WTR.</description>
    <label>Pastor Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>