force-app/main/default/objects/Contact/fields/Person_or_Family_Image__c.field-meta.xml
<CustomField>
    <fullName>Person_or_Family_Image__c</fullName>
    <label>Person or Family Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>