force-app/main/default/objects/Contact/fields/Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Type__c</fullName>
    <label>Person Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>