force-app/main/default/objects/Contact/fields/Phone_Combined__c.field-meta.xml
<CustomField>
    <fullName>Phone_Combined__c</fullName>
    <formula>HomePhone + &quot;/&quot; + 

OtherPhone + &quot;/&quot; + 

Phone_Other__c + &quot;/&quot; +

Phone + &quot;/&quot; +

Work_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Combined</label>
    <type>Text</type>
</CustomField>