force-app/main/default/objects/Contact/fields/Phone_Other__c.field-meta.xml
<CustomField>
    <fullName>Phone_Other__c</fullName>
    <inlineHelpText>To Enter a properly-formatted international phone number, start with a &quot;+&quot; followed immediate with a country code (e.g. &quot;+237&quot;). Then enter the remaining digits, inserting any spaces and/or dashes, as appropriate.</inlineHelpText>
    <label>Phone (Other)</label>
    <type>Phone</type>
</CustomField>