force-app/main/default/objects/Contact/fields/Planned_Giving_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Planned_Giving_Strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Development</description>
    <inlineHelpText>Check the box if the Donor has a planned giving strategy.</inlineHelpText>
    <label>Planned Giving Strategy</label>
    <type>Checkbox</type>
</CustomField>