force-app/main/default/objects/Contact/fields/Post_Event_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Post_Event_Strategy__c</fullName>
    <description>Used by Development</description>
    <label>Post Event Strategy</label>
    <type>TextArea</type>
</CustomField>