force-app/main/default/objects/Contact/fields/Potential_Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Potential_Test_Record__c</fullName>
    <formula>IF(CONTAINS(Email,&apos;fltest&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Test Record</label>
    <type>Checkbox</type>
</CustomField>