force-app/main/default/objects/Contact/fields/pref_AOM__c.field-meta.xml
<CustomField>
    <fullName>pref_AOM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SilverPop Preferences and Subscriptions</description>
    <label>pref_AOM</label>
    <type>Checkbox</type>
</CustomField>