force-app/main/default/objects/Contact/fields/pref_desk_of_Dennis__c.field-meta.xml
<CustomField>
    <fullName>pref_desk_of_Dennis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SilverPop Preferences and Subscriptions</description>
    <label>pref_desk_of_Dennis</label>
    <type>Checkbox</type>
</CustomField>